--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,38 @@
-.fancy-header {
+@import url('https://fonts.googleapis.com/css?family=Oswald');
+
+.fancy header {
     color: rebeccapurple;
     text-decoration: underline;
 }
-h1 { text-align: center; }
 
-h2 {text-decoration: underline;color: purple}
+body {
+    background-color: grey;
+    background-image: url("../images/indie-pattern-background.jpeg");
+    background-repeat: repeat;
+    font-family: 'Oswald', sans-serif;
+}
 
-h3{text-decoration: underline;color: darkred}
+#top {
+    text-align: center
+}
 
-h1, h5, h4 { text-decoration: underline;color: green }
+h1 {
+    color: rebeccapurple;
+}
 
-body { background-color: grey; }
+h2 {
+    text-decoration: underline;
+    color: darksalmon;
+}
+
+ul {
+    list-style: lower-latin
+}
+
+table, tr, td, th {
+    border: 3px white solid
+}
+
+body:hover {
+    color: bisque
+}
